# directorySyncToMsStorage

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake-modules/: GetSDK.cmake
src/: helpers.hpp  main.cpp
